# boilerplate

apis/file_operations/: PLAN_VALIDATION.md  README.md  REVIEWME.md  cli.py  files.json  main.py
build_systems/cmake/static_library_findpackage_minimal/: README.md
build_systems/cmake/static_library_findpackage_minimal/consumer_repo/: CMakeLists.txt
build_systems/cmake/static_library_findpackage_minimal/consumer_repo/src/: main.cpp
build_systems/cmake/static_library_findpackage_minimal/library_repo/: CMakeLists.txt
build_systems/cmake/static_library_findpackage_minimal/library_repo/include/: library_header.h
build_systems/cmake/static_library_findpackage_minimal/library_repo/src/: library.cpp
build_systems/pyproject/my_project_packaged/: conda.sh  pyproject.toml
build_systems/pyproject/my_project_packaged/orchestrator/src/: api.py  orchestrator.py
build_systems/pyproject/my_project_packaged/orchestrator/src/utils/: cms_client.py  promptflow_client.py
build_systems/pyproject/my_project_packaged/src/my_project.egg-info/: SOURCES.txt
build_systems/pyproject/my_project_packaged/src/my_project/module1/: module1.py
cicd/compose/: .gitlab-ci.yml
cmake_test/: CMakeLists.txt
cpp_helpers/: print_helpers.h
etl-pipeline/: Dockerfile  MODIFICATION_REVIEW.md  README.md  csv_to_bucket.py  docker-compose.yml  modification_plan.json  s3_to_mongo.py
pyproject/my_project_packaged/: README.md  pyproject.toml
pyproject/my_project_packaged/src/my_project.egg-info/: PKG-INFO
pyproject/my_project_packaged/src/my_project/module2/: module2.py
pyproject/my_project_packaged/src/my_project/module3/: module3.py
websockets/async/: async_client.py
